<resources>
    <string name="app_name">G News</string>

    <!-- Settings Menu Item [CHAR LIMIT=NONE] -->
    <string name="settings_menu_item">Settings</string>

    <!-- Settings Activity Title [CHAR LIMIT=NONE] -->
    <string name="settings_title">News Settings</string>

    <!-- Strings For Order-By Preference [CHAR LIMIT=30] -->
    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">orderBy</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_newest_value</string>

    <!-- Label for order-by newest option  -->
    <string name="settings_order_by_newest_label">Newest</string>
    <string name="settings_order_by_newest_value" translatable="false">newest</string>

    <!-- Label for order-by oldest option -->
    <string name="settings_order_by_oldest_label">Oldest</string>
    <string name="settings_order_by_oldest_value" translatable="false">oldest</string>

    <!-- Label for Section option -->
    <string name="section">Section</string>
    <string name="settings_section_key" translatable="false">section</string>

    <!-- Label for List size option -->
    <string name="listSize">"List Size (1"-"200)"</string>
    <string name="listSizeDefault">10</string>

    <!-- Text to display in the list when there are no books [CHAR LIMIT=NONE] -->
    <string name="no_news">No news found.</string>

    <!-- Error message when there is no internet connectivity [CHAR LIMIT=NONE] -->
    <string name="no_internet_connection">No Internet connection.</string>
</resources>
