<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="Settings">

    <ListPreference
        android:defaultValue="@string/settings_order_by_default"
        android:entries="@array/settings_order_by_labels"
        android:entryValues="@array/settings_order_by_values"
        android:key="@string/settings_order_by_key"
        android:title="@string/settings_order_by_label" />

    <ListPreference
        android:defaultValue="@string/section"
        android:entries="@array/section_array"
        android:entryValues="@array/section_array"
        android:key="@string/section"
        android:title="Sections">
    </ListPreference>

    <EditTextPreference
        android:defaultValue="@string/listSizeDefault"
        android:inputType="number"
        android:key="@string/listSize"
        android:selectAllOnFocus="true"
        android:title="@string/listSize">
    </EditTextPreference>

</PreferenceScreen>